# web_modul_7

./: README.md  bbb.txt  config.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 322b6057b0e9_init.py
db/: connect_db.py  models.py
queries/: my_select.py
seeds/: fill_data.py  seeds.py
